@@ -1,3 +1,6 @@
+13 Jul 2009 couderc
+ * first part of modifications to handle check dependencies.
+
 11 Mar 2009 couderc
  * unbreak library detection.
 
